# stock-investor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: security.yml  tests.yml
docs/: 100_MILESTONE_EXECUTION_PLAN.md  BROKER_INPUT_CONTRACT.md  COLLABORATING.md  CONTINUOUS_EXECUTION_PLAN.md  KLINE_CHART_REWRITE_RESEARCH.md  LONG_HORIZON_ROADMAP.md  MOOMOO_FIDELITY_INTEGRATION_RESEARCH.md  RESEARCH_FINDINGS.md  ROBINHOOD_MCP_SETUP.md  STRATEGY.md  TESTING.md
examples/: generate_demo_prices.py  positions.csv  risk-policy.json  robinhood-snapshot.json  snapshot.json  theses.json
models/: decision-support-v1.json  decision-support-v2.json  decision-support-v3.json  evaluation-periods-v1.json  model-governance-v1.json  wave-direction-v4-candidate.json
scripts/: check_public_safety.sh  export_public_review_package.sh  install_macos_services.sh  run_market_refresh.sh  run_tests.sh  run_web_server.sh  sync_runtime.sh
tests/: test_alpaca.py  test_archive.py  test_backtest.py  test_brief.py  test_broker_merge.py  test_candidate_boundary.py  test_dashboard.py  test_data.py  test_diagnostics.py  test_evaluation.py  test_feedback.py  test_filings.py  test_fundamentals.py  test_indicators.py  test_io.py  test_kline.py  test_model.py  test_monitor.py  test_moomoo_provider.py  test_read_only_contract.py  test_refresh.py  test_research.py  test_risk.py  test_robinhood.py  test_robinhood_provider.py  test_scoring.py  test_sec.py  test_snaptrade_provider.py  test_thesis.py  test_wave.py  test_web_server.py  test_yahoo.py
web/: index.html
(+39 files in other folders)
